--- a/S04 - Text Classification/BLU08 - Dimensionality Reduction/Exercise notebook.ipynb
+++ b/S04 - Text Classification/BLU08 - Dimensionality Reduction/Exercise notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 38,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1385,9 +1385,61 @@
     "                              by their chi squared score\n",
     "    \"\"\"\n",
     "    \n",
+    "    vectorizer_enum = {\n",
+    "        \"count\": CountVectorizer,\n",
+    "        \"tfidf\": TfidfVectorizer\n",
+    "    }\n",
+    "\n",
+    "    vectorizer = vectorizer_enum.get(vectorizer_type)()\n",
+    "    vectorizer.fit(X_train)\n",
+    "    X_train_vect = vectorizer.transform(X_train)\n",
+    "    ch2(X_train_vect, y_train)\n",
+    "\n",
+    "    return vectorizer, ch2_, X_train_ch2, ngrams_sorted\n",
+    "\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()"
+    "    # raise NotImplementedError()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vectorizer_enum = {\n",
+    "    \"count\": CountVectorizer,\n",
+    "    \"tfidf\": TfidfVectorizer\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "fit() missing 1 required positional argument: 'raw_documents'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/xjrr/batch6-workspace/S04 - Text Classification/BLU08 - Dimensionality Reduction/Exercise notebook.ipynb Cell 45\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell://wsl%2Bubuntu/home/xjrr/batch6-workspace/S04%20-%20Text%20Classification/BLU08%20-%20Dimensionality%20Reduction/Exercise%20notebook.ipynb#Y150sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m vectorizer_enum\u001b[39m.\u001b[39;49mget(\u001b[39m\"\u001b[39;49m\u001b[39mcount\u001b[39;49m\u001b[39m\"\u001b[39;49m)()\u001b[39m.\u001b[39;49mfit()\n",
+      "\u001b[0;31mTypeError\u001b[0m: fit() missing 1 required positional argument: 'raw_documents'"
+     ]
+    }
+   ],
+   "source": [
+    "vectorizer_enum.get(\"count\")().fit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
