--- a/S04 - Text Classification/BLU08 - Dimensionality Reduction/Exercise notebook.ipynb
+++ b/S04 - Text Classification/BLU08 - Dimensionality Reduction/Exercise notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 1,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 2,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -153,7 +153,7 @@
        "4            0  Much too stereotypical for my tastes and the s..."
       ]
      },
-     "execution_count": 80,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 3,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 4,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 5,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -378,7 +378,7 @@
        "4            0  much stereotypical tastes storyline unbelievab..."
       ]
      },
-     "execution_count": 83,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 7,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 8,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 9,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 10,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 11,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -814,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 12,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 13,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 14,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -970,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 15,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1015,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 16,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1100,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 17,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1121,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 18,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1161,7 +1161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 19,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1182,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 20,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1222,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 21,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1243,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 22,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1283,7 +1283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 23,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1304,7 +1304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 24,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1352,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 25,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1425,7 +1425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 26,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1491,7 +1491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 27,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1540,7 +1540,7 @@
        " 'us']"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1580,7 +1580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 28,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1841,7 +1841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 29,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1895,7 +1895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 30,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1940,7 +1940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2038,7 +2038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2079,7 +2079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2093,7 +2093,20 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NotImplementedError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m/home/jrr/batch6-workspace/S04 - Text Classification/BLU08 - Dimensionality Reduction/Exercise notebook.ipynb Cell 57\u001b[0m in \u001b[0;36m<cell line: 10>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/jrr/batch6-workspace/S04%20-%20Text%20Classification/BLU08%20-%20Dimensionality%20Reduction/Exercise%20notebook.ipynb#Y110sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m df_preprocessed \u001b[39m=\u001b[39m load_preprocessed_data()\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/jrr/batch6-workspace/S04%20-%20Text%20Classification/BLU08%20-%20Dimensionality%20Reduction/Exercise%20notebook.ipynb#Y110sdnNjb2RlLXJlbW90ZQ%3D%3D?line=2'>3</a>\u001b[0m X_train, X_test, y_train, y_test \u001b[39m=\u001b[39m train_test_split(\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/jrr/batch6-workspace/S04%20-%20Text%20Classification/BLU08%20-%20Dimensionality%20Reduction/Exercise%20notebook.ipynb#Y110sdnNjb2RlLXJlbW90ZQ%3D%3D?line=3'>4</a>\u001b[0m     df_preprocessed[\u001b[39m'\u001b[39m\u001b[39mreviewText\u001b[39m\u001b[39m'\u001b[39m], \n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/jrr/batch6-workspace/S04%20-%20Text%20Classification/BLU08%20-%20Dimensionality%20Reduction/Exercise%20notebook.ipynb#Y110sdnNjb2RlLXJlbW90ZQ%3D%3D?line=4'>5</a>\u001b[0m     df_preprocessed[\u001b[39m'\u001b[39m\u001b[39mhelpfulness\u001b[39m\u001b[39m'\u001b[39m], \n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/jrr/batch6-workspace/S04%20-%20Text%20Classification/BLU08%20-%20Dimensionality%20Reduction/Exercise%20notebook.ipynb#Y110sdnNjb2RlLXJlbW90ZQ%3D%3D?line=5'>6</a>\u001b[0m     test_size\u001b[39m=\u001b[39m\u001b[39m0.3\u001b[39m, \n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/jrr/batch6-workspace/S04%20-%20Text%20Classification/BLU08%20-%20Dimensionality%20Reduction/Exercise%20notebook.ipynb#Y110sdnNjb2RlLXJlbW90ZQ%3D%3D?line=6'>7</a>\u001b[0m     random_state\u001b[39m=\u001b[39m\u001b[39m42\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/jrr/batch6-workspace/S04%20-%20Text%20Classification/BLU08%20-%20Dimensionality%20Reduction/Exercise%20notebook.ipynb#Y110sdnNjb2RlLXJlbW90ZQ%3D%3D?line=7'>8</a>\u001b[0m )\n\u001b[0;32m---> <a href='vscode-notebook-cell://wsl%2Bubuntu/home/jrr/batch6-workspace/S04%20-%20Text%20Classification/BLU08%20-%20Dimensionality%20Reduction/Exercise%20notebook.ipynb#Y110sdnNjb2RlLXJlbW90ZQ%3D%3D?line=9'>10</a>\u001b[0m vectorizer, pca, clf, y_pred_30, variance_30 \u001b[39m=\u001b[39m train_model_pca_svm(X_train, y_train, X_test, y_test, num_features\u001b[39m=\u001b[39;49m\u001b[39m30\u001b[39;49m, seed\u001b[39m=\u001b[39;49m\u001b[39m42\u001b[39;49m)\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/jrr/batch6-workspace/S04%20-%20Text%20Classification/BLU08%20-%20Dimensionality%20Reduction/Exercise%20notebook.ipynb#Y110sdnNjb2RlLXJlbW90ZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39m----- Computed PCA for 30 features -----\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/jrr/batch6-workspace/S04%20-%20Text%20Classification/BLU08%20-%20Dimensionality%20Reduction/Exercise%20notebook.ipynb#Y110sdnNjb2RlLXJlbW90ZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39massert\u001b[39;00m np\u001b[39m.\u001b[39mmean(y_pred_30) \u001b[39m==\u001b[39m \u001b[39m0.5516666666666666\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mThe prediction is not correct.\u001b[39m\u001b[39m'\u001b[39m\n",
+      "\u001b[1;32m/home/jrr/batch6-workspace/S04 - Text Classification/BLU08 - Dimensionality Reduction/Exercise notebook.ipynb Cell 57\u001b[0m in \u001b[0;36mtrain_model_pca_svm\u001b[0;34m(X_train, y_train, X_test, y_test, num_features, seed)\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/jrr/batch6-workspace/S04%20-%20Text%20Classification/BLU08%20-%20Dimensionality%20Reduction/Exercise%20notebook.ipynb#Y110sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"Returns a fitted CountVectorizer, the PCA, a support vector classifier\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/jrr/batch6-workspace/S04%20-%20Text%20Classification/BLU08%20-%20Dimensionality%20Reduction/Exercise%20notebook.ipynb#Y110sdnNjb2RlLXJlbW90ZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mand the test predictions computed with these\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/jrr/batch6-workspace/S04%20-%20Text%20Classification/BLU08%20-%20Dimensionality%20Reduction/Exercise%20notebook.ipynb#Y110sdnNjb2RlLXJlbW90ZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39m\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/jrr/batch6-workspace/S04%20-%20Text%20Classification/BLU08%20-%20Dimensionality%20Reduction/Exercise%20notebook.ipynb#Y110sdnNjb2RlLXJlbW90ZQ%3D%3D?line=17'>18</a>\u001b[0m \u001b[39m    explained_variance(float): variance in the data explained by all the PCA components together\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/jrr/batch6-workspace/S04%20-%20Text%20Classification/BLU08%20-%20Dimensionality%20Reduction/Exercise%20notebook.ipynb#Y110sdnNjb2RlLXJlbW90ZQ%3D%3D?line=18'>19</a>\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/jrr/batch6-workspace/S04%20-%20Text%20Classification/BLU08%20-%20Dimensionality%20Reduction/Exercise%20notebook.ipynb#Y110sdnNjb2RlLXJlbW90ZQ%3D%3D?line=19'>20</a>\u001b[0m \u001b[39m# YOUR CODE HERE\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell://wsl%2Bubuntu/home/jrr/batch6-workspace/S04%20-%20Text%20Classification/BLU08%20-%20Dimensionality%20Reduction/Exercise%20notebook.ipynb#Y110sdnNjb2RlLXJlbW90ZQ%3D%3D?line=20'>21</a>\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mNotImplementedError\u001b[39;00m()\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/jrr/batch6-workspace/S04%20-%20Text%20Classification/BLU08%20-%20Dimensionality%20Reduction/Exercise%20notebook.ipynb#Y110sdnNjb2RlLXJlbW90ZQ%3D%3D?line=22'>23</a>\u001b[0m \u001b[39mreturn\u001b[39;00m vectorizer, pca, clf, y_pred, explained_variance\n",
+      "\u001b[0;31mNotImplementedError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "df_preprocessed = load_preprocessed_data()\n",
     "\n",
