--- a/S04 - Text Classification/BLU08 - Dimensionality Reduction/Exercise notebook.ipynb
+++ b/S04 - Text Classification/BLU08 - Dimensionality Reduction/Exercise notebook.ipynb
@@ -2037,191 +2037,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 107,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_preprocessed = load_preprocessed_data()\n",
-    "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(\n",
-    "    df_preprocessed['reviewText'], \n",
-    "    df_preprocessed['helpfulness'], \n",
-    "    test_size=0.3, \n",
-    "    random_state=42\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 108,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_train, X_train_vectorized, X_test, y_test, num_features, seed = X_train, y_train, X_test, y_test, 30, 42"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 109,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vectorizer = CountVectorizer(max_features=5000)\n",
-    "vectorizer.fit(X_train)\n",
-    "X_train_vectorized = vectorizer.transform(X_train)\n",
-    "X_test_vectorized = vectorizer.transform(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 111,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dense_X_train = X_train_vectorized.toarray()\n",
-    "dense_X_test = X_test_vectorized.toarray()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 112,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pca = PCA(n_components=num_features, random_state=seed)\n",
-    "X_train_pca = pca.fit_transform(dense_X_train)\n",
-    "X_test_pca = pca.transform(dense_X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "SVC(random_state=42)"
-      ]
-     },
-     "execution_count": 94,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "clf = SVC(random_state=seed)\n",
-    "clf.fit(X_train_pca, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_pred = clf.predict(X_test_pca)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 96,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "explained_variance = pca.explained_variance_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vectorizer, pca, clf, y_pred_30, variance_30 = vectorizer, pca, clf, y_pred, explained_variance"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.551"
-      ]
-     },
-     "execution_count": 98,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.mean(y_pred_30)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 99,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1653"
-      ]
-     },
-     "execution_count": 99,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.sum(y_pred_30)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 100,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'teaching'"
-      ]
-     },
-     "execution_count": 100,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "vectorizer.get_feature_names()[4424]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "assert np.mean(y_pred_30) == 0.5516666666666666, 'The prediction is not correct.'\n",
-    "assert np.sum(y_pred_30) == 1655, 'The prediction is not correct.'\n",
-    "assert pca.n_components == 30, 'The number of PCA components should be 30'\n",
-    "assert vectorizer.get_feature_names()[4424] == 'teaching', 'The features are not correctly vectorized.'"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 66,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2235,7 +2057,7 @@
    },
    "outputs": [],
    "source": [
-    "def train_model_pca_svm(X_train, X_train_vectorized, X_test, y_test, num_features: int = 100, seed: int = 42):\n",
+    "def train_model_pca_svm(X_train, y_train, X_test, y_test, num_features: int = 100, seed: int = 42):\n",
     "    \"\"\"Returns a fitted CountVectorizer, the PCA, a support vector classifier\n",
     "    and the test predictions computed with these\n",
     "    \n",
@@ -2257,135 +2079,30 @@
     "    # YOUR CODE HERE\n",
     "    # raise NotImplementedError()\n",
     "    vectorizer = CountVectorizer(max_features=5000)\n",
-    "    \n",
-    "    X_train_vectorized = vectorizer.fit_transform(X_train)\n",
+    "    vectorizer.fit(X_train)\n",
+    "    X_train_vectorized = vectorizer.transform(X_train)\n",
     "    X_test_vectorized = vectorizer.transform(X_test)\n",
     "\n",
     "    dense_X_train = X_train_vectorized.toarray()\n",
     "    dense_X_test = X_test_vectorized.toarray()\n",
     "\n",
     "    pca = PCA(n_components=num_features, random_state=seed)\n",
-    "    X_train_pca = pca.fit_transform(dense_X_train)\n",
+    "    pca.fit(dense_X_train)\n",
+    "    X_train_pca = pca.transform(dense_X_train)\n",
     "    X_test_pca = pca.transform(dense_X_test)\n",
     "\n",
     "    clf = SVC(random_state=seed)\n",
     "    clf.fit(X_train_pca, y_train)\n",
     "    y_pred = clf.predict(X_test_pca)\n",
     "    \n",
-    "    explained_variance = pca.explained_variance_\n",
-    "    \n",
+    "    explained_variance = sum(pca.explained_variance_) # type: ignore    \n",
     "\n",
     "    return vectorizer, pca, clf, y_pred, explained_variance"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_preprocessed = load_preprocessed_data()\n",
-    "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(\n",
-    "    df_preprocessed['reviewText'], \n",
-    "    df_preprocessed['helpfulness'], \n",
-    "    test_size=0.3, \n",
-    "    random_state=42\n",
-    ")\n",
-    "\n",
-    "vectorizer, pca, clf, y_pred_30, variance_30 = train_model_pca_svm(X_train, y_train, X_test, y_test, num_features=30, seed=42)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 103,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.551"
-      ]
-     },
-     "execution_count": 103,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.mean(y_pred_30)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 104,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1653"
-      ]
-     },
-     "execution_count": 104,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.sum(y_pred_30)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 106,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "30"
-      ]
-     },
-     "execution_count": 106,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pca.n_components"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 105,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'teaching'"
-      ]
-     },
-     "execution_count": 105,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "vectorizer.get_feature_names()[4424]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 67,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2401,16 +2118,15 @@
    },
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m/home/jrr/batch6-workspace/S04 - Text Classification/BLU08 - Dimensionality Reduction/Exercise notebook.ipynb Cell 57\u001b[0m in \u001b[0;36m<cell line: 10>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/jrr/batch6-workspace/S04%20-%20Text%20Classification/BLU08%20-%20Dimensionality%20Reduction/Exercise%20notebook.ipynb#Y110sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m df_preprocessed \u001b[39m=\u001b[39m load_preprocessed_data()\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/jrr/batch6-workspace/S04%20-%20Text%20Classification/BLU08%20-%20Dimensionality%20Reduction/Exercise%20notebook.ipynb#Y110sdnNjb2RlLXJlbW90ZQ%3D%3D?line=2'>3</a>\u001b[0m X_train, X_test, y_train, y_test \u001b[39m=\u001b[39m train_test_split(\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/jrr/batch6-workspace/S04%20-%20Text%20Classification/BLU08%20-%20Dimensionality%20Reduction/Exercise%20notebook.ipynb#Y110sdnNjb2RlLXJlbW90ZQ%3D%3D?line=3'>4</a>\u001b[0m     df_preprocessed[\u001b[39m'\u001b[39m\u001b[39mreviewText\u001b[39m\u001b[39m'\u001b[39m], \n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/jrr/batch6-workspace/S04%20-%20Text%20Classification/BLU08%20-%20Dimensionality%20Reduction/Exercise%20notebook.ipynb#Y110sdnNjb2RlLXJlbW90ZQ%3D%3D?line=4'>5</a>\u001b[0m     df_preprocessed[\u001b[39m'\u001b[39m\u001b[39mhelpfulness\u001b[39m\u001b[39m'\u001b[39m], \n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/jrr/batch6-workspace/S04%20-%20Text%20Classification/BLU08%20-%20Dimensionality%20Reduction/Exercise%20notebook.ipynb#Y110sdnNjb2RlLXJlbW90ZQ%3D%3D?line=5'>6</a>\u001b[0m     test_size\u001b[39m=\u001b[39m\u001b[39m0.3\u001b[39m, \n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/jrr/batch6-workspace/S04%20-%20Text%20Classification/BLU08%20-%20Dimensionality%20Reduction/Exercise%20notebook.ipynb#Y110sdnNjb2RlLXJlbW90ZQ%3D%3D?line=6'>7</a>\u001b[0m     random_state\u001b[39m=\u001b[39m\u001b[39m42\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/jrr/batch6-workspace/S04%20-%20Text%20Classification/BLU08%20-%20Dimensionality%20Reduction/Exercise%20notebook.ipynb#Y110sdnNjb2RlLXJlbW90ZQ%3D%3D?line=7'>8</a>\u001b[0m )\n\u001b[0;32m---> <a href='vscode-notebook-cell://wsl%2Bubuntu/home/jrr/batch6-workspace/S04%20-%20Text%20Classification/BLU08%20-%20Dimensionality%20Reduction/Exercise%20notebook.ipynb#Y110sdnNjb2RlLXJlbW90ZQ%3D%3D?line=9'>10</a>\u001b[0m vectorizer, pca, clf, y_pred_30, variance_30 \u001b[39m=\u001b[39m train_model_pca_svm(X_train, y_train, X_test, y_test, num_features\u001b[39m=\u001b[39;49m\u001b[39m30\u001b[39;49m, seed\u001b[39m=\u001b[39;49m\u001b[39m42\u001b[39;49m)\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/jrr/batch6-workspace/S04%20-%20Text%20Classification/BLU08%20-%20Dimensionality%20Reduction/Exercise%20notebook.ipynb#Y110sdnNjb2RlLXJlbW90ZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39m----- Computed PCA for 30 features -----\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/jrr/batch6-workspace/S04%20-%20Text%20Classification/BLU08%20-%20Dimensionality%20Reduction/Exercise%20notebook.ipynb#Y110sdnNjb2RlLXJlbW90ZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39massert\u001b[39;00m np\u001b[39m.\u001b[39mmean(y_pred_30) \u001b[39m==\u001b[39m \u001b[39m0.5516666666666666\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mThe prediction is not correct.\u001b[39m\u001b[39m'\u001b[39m\n",
-      "\u001b[1;32m/home/jrr/batch6-workspace/S04 - Text Classification/BLU08 - Dimensionality Reduction/Exercise notebook.ipynb Cell 57\u001b[0m in \u001b[0;36mtrain_model_pca_svm\u001b[0;34m(X_train, X_train_vectorized, X_test, y_test, num_features, seed)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/jrr/batch6-workspace/S04%20-%20Text%20Classification/BLU08%20-%20Dimensionality%20Reduction/Exercise%20notebook.ipynb#Y110sdnNjb2RlLXJlbW90ZQ%3D%3D?line=23'>24</a>\u001b[0m X_train_vectorized \u001b[39m=\u001b[39m vectorizer\u001b[39m.\u001b[39mtransform(X_train)\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/jrr/batch6-workspace/S04%20-%20Text%20Classification/BLU08%20-%20Dimensionality%20Reduction/Exercise%20notebook.ipynb#Y110sdnNjb2RlLXJlbW90ZQ%3D%3D?line=24'>25</a>\u001b[0m X_test_vectorized \u001b[39m=\u001b[39m vectorizer\u001b[39m.\u001b[39mtransform(X_test)\n\u001b[0;32m---> <a href='vscode-notebook-cell://wsl%2Bubuntu/home/jrr/batch6-workspace/S04%20-%20Text%20Classification/BLU08%20-%20Dimensionality%20Reduction/Exercise%20notebook.ipynb#Y110sdnNjb2RlLXJlbW90ZQ%3D%3D?line=26'>27</a>\u001b[0m dense_X_train \u001b[39m=\u001b[39m X_train_vectorized\u001b[39m.\u001b[39;49mtoarray()\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/jrr/batch6-workspace/S04%20-%20Text%20Classification/BLU08%20-%20Dimensionality%20Reduction/Exercise%20notebook.ipynb#Y110sdnNjb2RlLXJlbW90ZQ%3D%3D?line=27'>28</a>\u001b[0m dense_X_test \u001b[39m=\u001b[39m X_test_vectorized\u001b[39m.\u001b[39mtoarray()\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/home/jrr/batch6-workspace/S04%20-%20Text%20Classification/BLU08%20-%20Dimensionality%20Reduction/Exercise%20notebook.ipynb#Y110sdnNjb2RlLXJlbW90ZQ%3D%3D?line=29'>30</a>\u001b[0m pca \u001b[39m=\u001b[39m PCA(n_components\u001b[39m=\u001b[39mnum_features, random_state\u001b[39m=\u001b[39mseed)\n",
-      "File \u001b[0;32m~/.virtualenvs/blu08/lib/python3.8/site-packages/scipy/sparse/_compressed.py:1062\u001b[0m, in \u001b[0;36m_cs_matrix.toarray\u001b[0;34m(self, order, out)\u001b[0m\n\u001b[1;32m   1060\u001b[0m     y \u001b[39m=\u001b[39m out\u001b[39m.\u001b[39mT\n\u001b[1;32m   1061\u001b[0m M, N \u001b[39m=\u001b[39m x\u001b[39m.\u001b[39m_swap(x\u001b[39m.\u001b[39mshape)\n\u001b[0;32m-> 1062\u001b[0m csr_todense(M, N, x\u001b[39m.\u001b[39;49mindptr, x\u001b[39m.\u001b[39;49mindices, x\u001b[39m.\u001b[39;49mdata, y)\n\u001b[1;32m   1063\u001b[0m \u001b[39mreturn\u001b[39;00m out\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----- Computed PCA for 30 features -----\n",
+      "\n",
+      "----- Computed PCA for 50 features -----\n",
+      "\n",
+      "----- Computed PCA for 100 features -----\n",
+      "\n"
      ]
     }
    ],
@@ -2466,7 +2182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2479,7 +2195,29 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Predictions with 30 features: \n",
+      "Precision: 0.656797583081571\n",
+      "Recall: 0.6772585669781932\n",
+      "Explained variance: 33.89873046633365\n",
+      "\n",
+      "Predictions with 50 features: \n",
+      "Precision: 0.6646153846153846\n",
+      "Recall: 0.6728971962616822\n",
+      "Explained variance: 41.371290795082004\n",
+      "\n",
+      "Predictions with 100 features: \n",
+      "Precision: 0.6611519607843137\n",
+      "Recall: 0.6722741433021807\n",
+      "Explained variance: 54.026017220806374\n"
+     ]
+    }
+   ],
    "source": [
     "precision, recall = get_precision_recall(y_test, y_pred_30)     \n",
     "print(\"\\nPredictions with 30 features: \")\n",
