--- a/S04 - Text Classification/BLU08 - Dimensionality Reduction/Exercise notebook.ipynb
+++ b/S04 - Text Classification/BLU08 - Dimensionality Reduction/Exercise notebook.ipynb
@@ -2043,7 +2043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 32,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2102,7 +2102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 33,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2182,7 +2182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 34,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2282,7 +2282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2324,7 +2324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2338,14 +2338,14 @@
    },
    "outputs": [],
    "source": [
-    "# book_vector = ...\n",
+    "book_vector = nlp('book').vector\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2414,7 +2414,7 @@
     "                                 suitable for plotting\n",
     "    \"\"\"\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
     "    \n",
     "    return reduced_vecs"
    ]
