--- a/S04 - Text Classification/BLU08 - Dimensionality Reduction/Exercise notebook.ipynb
+++ b/S04 - Text Classification/BLU08 - Dimensionality Reduction/Exercise notebook.ipynb
@@ -2387,7 +2387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 38,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2423,7 +2423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 39,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2469,7 +2469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 40,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2491,7 +2491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 41,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2519,7 +2519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -2559,7 +2559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 43,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2585,7 +2585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 44,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2671,7 +2671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2700,13 +2700,18 @@
     "                                   input_word, based on cosine similarity between the word vectors\n",
     "    '''\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
+    "    words_in_vocab_ = np.array(words_in_vocab)\n",
+    "    similarity_scores = (pd.DataFrame(dict(zip(words_in_vocab_[words_in_vocab_ != input_word], word_vectors[words_in_vocab_ != input_word])))\n",
+    "                            .T\n",
+    "                            .apply(lambda row: cosine_similarity(np.array([[row[0], row[1]]]), word_vectors[words_in_vocab_ == input_word])[0][0], axis=1))\n",
+    "    closest_words_list = similarity_scores[similarity_scores == similarity_scores.max()].index.to_list()\n",
     "    return closest_words_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2729,9 +2734,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Closest words to nintendo:\n",
+      "['xbox']\n",
+      "\n",
+      "Closest words to playing:\n",
+      "['studying']\n",
+      "\n",
+      "Closest words to pineapple:\n",
+      "['mango']\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"\\nClosest words to nintendo:\")\n",
     "print(closest_word('nintendo', words_to_plot, coords_array))\n",
@@ -2782,11 +2803,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.8.10"
   },
   "vscode": {
    "interpreter": {
-    "hash": "16ca2675aa3ddeb0d45eeb5d75f16c9dd193af781cc0e052cb25b0d4fc9a734c"
+    "hash": "5fae7c60a889a1c44cd9d6df37d8c43ead0a66d7ac437d2c49311bb037c3bf23"
    }
   }
  },
