--- a/S04 - Text Classification/BLU09 - Information Extraction/Exercise notebook.ipynb
+++ b/S04 - Text Classification/BLU09 - Information Extraction/Exercise notebook.ipynb
@@ -292,7 +292,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "06a449359f394f9aafad19de976e6b5b",
+       "model_id": "cddcd9f165324444a72921f28d029b9e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 5,
    "id": "551e65b8",
    "metadata": {
     "deletable": false,
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "id": "68f49efb",
    "metadata": {
     "deletable": false,
@@ -495,7 +495,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "id": "900241e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RANDOM_STATE = 42"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "e900b1d2",
    "metadata": {
     "deletable": false,
@@ -515,19 +525,22 @@
     "    Train a Random Forest using sklearn's Pipeline and return the trained model and its accuracy in the test set.\n",
     "    \"\"\"\n",
     "    \n",
-    "    # pipe = (...)\n",
-    "    # pipe.fit(...)\n",
-    "    # (...)\n",
+    "    pipe = Pipeline([('tfidf', TfidfVectorizer()),\n",
+    "                   ('classifier', RandomForestClassifier())])\n",
+    "    pipe.fit(X_train, y_train)\n",
     "    \n",
+    "    y_pred = pipe.predict(X_test)\n",
+    "    \n",
+    "    acc = accuracy_score(y_test, y_pred)\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    \n",
     "    \n",
     "    return pipe, acc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "59b79669",
    "metadata": {
     "deletable": false,
@@ -607,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "68f158c1",
    "metadata": {
     "deletable": false,
@@ -629,14 +642,25 @@
     "# count how many matches!\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
+    "# raise NotImplementedError()\n",
     "\n",
-    "# count = ..."
+    "counts = []\n",
+    "\n",
+    "matcher = Matcher(nlp.vocab)\n",
+    "for word in words:\n",
+    "    matcher.add(word, [[{'TEXT': word}]])\n",
+    "    \n",
+    "for idx, doc in enumerate(docs[:]):\n",
+    "    matches = matcher(doc)\n",
+    "    for match_id, start, end in matches:\n",
+    "        span = doc[start:end]  # the matched span\n",
+    "        counts.append([idx, start, end, span])\n",
+    "count = len(counts)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "8b6002d5",
    "metadata": {
     "deletable": false,
@@ -680,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "c170ff4c",
    "metadata": {
     "deletable": false,
@@ -705,16 +729,27 @@
     "    print(token.pos_)\n",
     "\"\"\"\n",
     "\n",
+    "matcher = Matcher(nlp.vocab)\n",
+    "matcher.add('adjective', [[{'POS': 'ADJ'}]])\n",
+    "matcher.add('adverb', [[{'POS': 'ADV'}]])\n",
+    "\n",
+    "nb_adj_adv = []\n",
+    "\n",
+    "for idx, doc in enumerate(docs[:]):\n",
+    "    matches = matcher(doc)\n",
+    "    nb_adj_adv.append(len(matches))\n",
+    "\n",
+    "\n",
     "# Return a list with the number of adjectives and adverbs for every piece of news in docs\n",
     "# nb_adj_adv = [...]\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "4618744a",
    "metadata": {
     "deletable": false,
