--- a/S04 - Text Classification/BLU09 - Information Extraction/Exercise notebook.ipynb
+++ b/S04 - Text Classification/BLU09 - Information Extraction/Exercise notebook.ipynb
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "id": "a89fe123",
    "metadata": {
     "deletable": false,
@@ -817,8 +817,8 @@
     "# I'll reset the matcher for you\n",
     "matcher = Matcher(nlp.vocab)\n",
     "\n",
-    "# pattern = [...] to find people entities\n",
-    "# matcher.add(\"\", pattern)\n",
+    "pattern = [[{'ENT_TYPE': 'PERSON'}]]\n",
+    "matcher.add(\"person\", pattern)\n",
     "\n",
     "# for doc in docs:\n",
     "# do matches and save the text in a list\n",
@@ -826,15 +826,23 @@
     "# count the number of times the same Person appears on the list (hint: remember the dictionary solution...)\n",
     "# only take the top 10 of the counter! THE RESULT SHOULD BE A LIST\n",
     "\n",
-    "# most_common_ents = ...\n",
+    "name_count = Counter()\n",
+    "\n",
+    "for idx, doc in enumerate(docs[:]):\n",
+    "    matches = matcher(doc)\n",
+    "    for match_id, start, end in matches:\n",
+    "        span = doc[start:end].text  # the matched span\n",
+    "        name_count.update([span])\n",
+    "        \n",
+    "most_common_ents = name_count.most_common(10)\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "id": "a6de656a",
    "metadata": {
     "deletable": false,
@@ -879,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "id": "bf32b64a",
    "metadata": {
     "deletable": false,
@@ -893,7 +901,27 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Trump', 5161),\n",
+       " ('Clinton', 3301),\n",
+       " ('Obama', 1834),\n",
+       " ('Hillary Clinton', 1752),\n",
+       " ('Donald Trump', 1674),\n",
+       " ('Hillary', 1462),\n",
+       " ('Putin', 542),\n",
+       " ('Donald J. Trump', 373),\n",
+       " ('Comey', 366),\n",
+       " ('Barack Obama', 306)]"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "most_common_ents"
    ]
@@ -925,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "id": "b78e5cfe",
    "metadata": {
     "deletable": false,
@@ -939,7 +967,64 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trump\n",
+      "1    2532\n",
+      "0    2468\n",
+      "Name: label, dtype: int64\n",
+      "\n",
+      "Clinton\n",
+      "1    2532\n",
+      "0    2468\n",
+      "Name: label, dtype: int64\n",
+      "\n",
+      "Obama\n",
+      "1    2532\n",
+      "0    2468\n",
+      "Name: label, dtype: int64\n",
+      "\n",
+      "Hillary Clinton\n",
+      "1    2532\n",
+      "0    2468\n",
+      "Name: label, dtype: int64\n",
+      "\n",
+      "Donald Trump\n",
+      "1    2532\n",
+      "0    2468\n",
+      "Name: label, dtype: int64\n",
+      "\n",
+      "Hillary\n",
+      "1    2532\n",
+      "0    2468\n",
+      "Name: label, dtype: int64\n",
+      "\n",
+      "Putin\n",
+      "1    2532\n",
+      "0    2468\n",
+      "Name: label, dtype: int64\n",
+      "\n",
+      "Donald J. Trump\n",
+      "1    2532\n",
+      "0    2468\n",
+      "Name: label, dtype: int64\n",
+      "\n",
+      "Comey\n",
+      "1    2532\n",
+      "0    2468\n",
+      "Name: label, dtype: int64\n",
+      "\n",
+      "Barack Obama\n",
+      "1    2532\n",
+      "0    2468\n",
+      "Name: label, dtype: int64\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "for person, _ in most_common_ents:\n",
     "    print(person)\n",
