--- a/S04 - Text Classification/BLU09 - Information Extraction/Exercise notebook.ipynb
+++ b/S04 - Text Classification/BLU09 - Information Extraction/Exercise notebook.ipynb
@@ -1144,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "acb93e53",
    "metadata": {
     "deletable": false,
@@ -1157,22 +1157,202 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "      <th>label</th>\n",
+       "      <th>nb_adj_adv</th>\n",
+       "      <th>nb_words</th>\n",
+       "      <th>doc_length</th>\n",
+       "      <th>avg_word_length</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>house dem aide didnt comeys letter jason chaff...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>94</td>\n",
+       "      <td>413</td>\n",
+       "      <td>3155</td>\n",
+       "      <td>6.641646</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>feeling life circles roundabout heads straight...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>83</td>\n",
+       "      <td>345</td>\n",
+       "      <td>2588</td>\n",
+       "      <td>6.504348</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>truth fired october 29 2016 tension intelligen...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>175</td>\n",
+       "      <td>620</td>\n",
+       "      <td>4854</td>\n",
+       "      <td>6.830645</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>videos 15 civilians killed single airstrike id...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>47</td>\n",
+       "      <td>274</td>\n",
+       "      <td>2060</td>\n",
+       "      <td>6.521898</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>print iranian woman sentenced years prison ira...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>83</td>\n",
+       "      <td>639</td>\n",
+       "      <td>6.710843</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4995</th>\n",
+       "      <td>washington little affection trust hillary clin...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>75</td>\n",
+       "      <td>398</td>\n",
+       "      <td>2929</td>\n",
+       "      <td>6.361809</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4996</th>\n",
+       "      <td>httpmediaarchivesgsradionetdduke112216mp3 dr d...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12</td>\n",
+       "      <td>75</td>\n",
+       "      <td>592</td>\n",
+       "      <td>6.906667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4997</th>\n",
+       "      <td>los angeles hollywoods secretive unusual jobs ...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>122</td>\n",
+       "      <td>722</td>\n",
+       "      <td>5025</td>\n",
+       "      <td>5.961219</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4998</th>\n",
+       "      <td>chant erupts college auditorium washington adm...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>444</td>\n",
+       "      <td>1967</td>\n",
+       "      <td>14798</td>\n",
+       "      <td>6.523640</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4999</th>\n",
+       "      <td>military forces turkey attempted coup friday p...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>65</td>\n",
+       "      <td>414</td>\n",
+       "      <td>3157</td>\n",
+       "      <td>6.628019</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5000 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                   text  label  nb_adj_adv  \\\n",
+       "id                                                                           \n",
+       "0     house dem aide didnt comeys letter jason chaff...      1          94   \n",
+       "1     feeling life circles roundabout heads straight...      0          83   \n",
+       "2     truth fired october 29 2016 tension intelligen...      1         175   \n",
+       "3     videos 15 civilians killed single airstrike id...      1          47   \n",
+       "4     print iranian woman sentenced years prison ira...      1           7   \n",
+       "...                                                 ...    ...         ...   \n",
+       "4995  washington little affection trust hillary clin...      0          75   \n",
+       "4996  httpmediaarchivesgsradionetdduke112216mp3 dr d...      1          12   \n",
+       "4997  los angeles hollywoods secretive unusual jobs ...      0         122   \n",
+       "4998  chant erupts college auditorium washington adm...      0         444   \n",
+       "4999  military forces turkey attempted coup friday p...      0          65   \n",
+       "\n",
+       "      nb_words  doc_length  avg_word_length  \n",
+       "id                                           \n",
+       "0          413        3155         6.641646  \n",
+       "1          345        2588         6.504348  \n",
+       "2          620        4854         6.830645  \n",
+       "3          274        2060         6.521898  \n",
+       "4           83         639         6.710843  \n",
+       "...        ...         ...              ...  \n",
+       "4995       398        2929         6.361809  \n",
+       "4996        75         592         6.906667  \n",
+       "4997       722        5025         5.961219  \n",
+       "4998      1967       14798         6.523640  \n",
+       "4999       414        3157         6.628019  \n",
+       "\n",
+       "[5000 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# df_processed[\"nb_words\"] = ...\n",
-    "# df_processed[\"doc_length\"] = ...\n",
-    "# df_processed[\"avg_word_length\"] = ...\n",
+    "df_processed[\"nb_words\"] = df_processed['text'].apply(lambda x: len(x.split()))\n",
+    "df_processed[\"doc_length\"] = df_processed['text'].map(len)\n",
+    "df_processed[\"avg_word_length\"] = df_processed['text'].apply(lambda x: sum([len(word) for word in x.split()])/len(x.split()) if len(x.split())>0 else 0 )\n",
     "\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
+    "# raise NotImplementedError()\n",
     "\n",
     "df_processed"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "5ff5b354",
    "metadata": {
     "deletable": false,
